# backend/HotelManagement.Infrastructure/EntityFramework/Configuration/UserEntityConfiguration.cs
@@ -20,6 +20,7 @@ internal class UserEntityConfiguration : IEntityTypeConfiguration<User>
         builder.Property(q => q.Gender).IsRequired();
         builder.Property(q => q.Address).IsRequired();
         builder.Property(q => q.DateOfBirth).IsRequired();
+        builder.Property(q => q.ProfilePicture);
 
         builder.Property(q => q.RetainSearchHistory).IsRequired();
         builder.Property(q => q.SendOffersOnEmail).IsRequired();
